--- a/0xCAFE/res/values/strings.xml
+++ b/0xCAFE/res/values/strings.xml
@@ -4,10 +4,9 @@
     <string name="app_name">0xCAFE</string>
     <string name="action_settings">Settings</string>
     <string name="description">Convert a number from one base into another.</string>
-    <string name="input_hint">Enter your input number</string>
-    <string name="convert">Convert</string>
+    <string name="input_hint">Enter a number</string>
     <string name="output_error_incompatible">Incompatible Number.</string>
-    <string-array name="types">
+    <string-array name="bases">
         <item>binary (2)</item>
         <item>octal (8)</item>
         <item>decimal (10)</item>
