--- a/trunk/0xCAFE/res/values-de/strings.xml
+++ b/trunk/0xCAFE/res/values-de/strings.xml
@@ -2,14 +2,24 @@
 <resources>
     
     <string name="app_name">0xCAFE</string>
-    <string name="action_settings">Einstellungen</string>
     <string name="description">Rechne eine Zahl von einer Basis in eine andere um.</string>
     <string name="input_hint">Gib eine Zahl ein</string>
     <string name="output_error_incompatible">Inkompatible Eingabezahl</string>
+    
     <string-array name="bases">
         <item>dual (2)</item>
         <item>oktal (8)</item>
         <item>dezimal (10)</item>
         <item>hexadezimal (16)</item>
     </string-array>
+    
+    <string name="title_activity_help">Hilfe</string>
+    <string name="help_icon_title">Logo von 0xCAFE</string>
+    <string name="help_description">
+        Mit 0xCAFE kannst du Zahlen von einer Basis in eine andere umrechnen.
+        Die App bekam ihren Namen von Programmiersprachen wie C, bei denen Hex-Zahlen mit 0x beginnen.
+        Deshalb ist der Ausdruck \'0xCAFE\' in C eine gültige Zahl, mit dem dezimalen Wert 51966, probier\'s aus :)
+    </string>
+    <string name="help_developers">Entwickelt von Hans und Fabian</string>
+    <string name="help_terms">Diese App ist Opensource verfügbar unter https://zeroxcafe.googlecode.com</string>
 </resources>
