--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -9,6 +9,10 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
 
   * Eingabe-Basis kann auf der Tastatur geändert werden.
   * Die Ausgabe erfolgt stets in allen verfügbaren Basen (2,8,10,16)
-  * Anleitung zur händischen Umrechnung von Zahlen zw. verschiedenen Basen mit Prüf-Methode, Modulo-Methode und 4-Bit-to-Hex-Methode.
   * beliebe Basen sollen auswählbar sein
   * Einstellung, ob Buchstaben in Hex-Werten groß oder klein geschrieben werden sollen
+  * Step-by-Step Anleitung zur Umrechnung mit selbst definierbaren Beispielen
+
+= Erledigt =
+
+* Anleitung zur händischen Umrechnung von Zahlen zw. verschiedenen Basen mit Prüf-Methode, Modulo-Methode und 4-Bit-to-Hex-Methode.
