--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -5,7 +5,7 @@
 Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
 
 
-= Details =
+= Ausstehend =
 
   * Eingabe-Basis kann auf der Tastatur geändert werden.
   * Die Ausgabe erfolgt stets in allen verfügbaren Basen (2,8,10,16)
@@ -15,4 +15,4 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
 
 = Erledigt =
 
-* Anleitung zur händischen Umrechnung von Zahlen zw. verschiedenen Basen mit Prüf-Methode, Modulo-Methode und 4-Bit-to-Hex-Methode.
+  * Anleitung zur händischen Umrechnung von Zahlen zw. verschiedenen Basen mit Prüf-Methode, Modulo-Methode und 4-Bit-to-Hex-Methode.
