Edited wiki page Ideen through web user interface.

--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -12,6 +12,7 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * beliebe Basen sollen auswählbar sein
   * Einstellung, ob Buchstaben in Hex-Werten groß oder klein geschrieben werden sollen
   * Step-by-Step Anleitung zur Umrechnung mit selbst definierbaren Beispielen
+  * Automatische Erkennung von Perioden nach dem Trennpunkt
 
 = Erledigt =
 
