--- a/0xCAFE/res/values-de/strings.xml
+++ b/0xCAFE/res/values-de/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">0xCAFE</string>
     <string name="description">Rechne eine Zahl von einer Basis in eine andere um.</string>
     <string name="input_hint">Gib eine Zahl ein</string>
+    <string name="output_empty">-</string>
     <string name="output_error_incompatible">Inkompatible Eingabezahl</string>
     <string name="output_error_too_much_decimal_points">Die Zahl hat mehr als einen Dezimalpunkt.</string>
     
