--- a/trunk/0xCAFE/res/values-de/strings.xml
+++ b/trunk/0xCAFE/res/values-de/strings.xml
@@ -39,5 +39,6 @@
 	<string name="copy_result_success">Ergebnis wurde erfolgreich in die Zwischenablage kopiert!</string>
 	<string name="copy_result_error">Beim Kopieren in die Zwischenablage trat ein Fehler auf!</string>
 	<string name="clip_data_label">0xCAFE Ergebnis</string>
+	<string name="keyboard_decimalpoint">,</string>
     
 </resources>
