--- a/trunk/0xCAFE_Test/res/values/strings.xml
+++ b/trunk/0xCAFE_Test/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">0xCAFE_TestTest</string>
+    <string name="app_name">0xCAFE_Test</string>
 
 </resources>
