--- a/trunk/0xCAFE/res/values/strings.xml
+++ b/trunk/0xCAFE/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="copy_result_error">Failed to copy the result to the clipboard.</string>
     <string name="clip_data_label">0xCAFE result</string>
     <string name="keyboard_decimalpoint">.</string>
+    <string name="keyboard_clear">CLR</string>
 
 </resources>
