fixed the keyboard bug (on S4 the horizontal gap was wrong in portrait mode) externalized string from hexkbd.xml

--- a/0xCAFE/res/values-de/strings.xml
+++ b/0xCAFE/res/values-de/strings.xml
@@ -43,5 +43,6 @@
 	<string name="copy_result_error">Beim Kopieren in die Zwischenablage trat ein Fehler auf!</string>
 	<string name="clip_data_label">0xCAFE Ergebnis</string>
 	<string name="keyboard_decimalpoint">,</string>
+	<string name="keyboard_clear">CLR</string>
     
 </resources>
