Edited wiki page Ideen through web user interface.

--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -12,8 +12,8 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * Einstellung, ob Buchstaben in Hex-Werten groß oder klein geschrieben werden sollen
   * Step-by-Step Anleitung zur Umrechnung mit selbst definierbaren Beispielen
   * Dialog mit Spinnern zur Auswahl der Ein- und Ausgabe-Basis.
-  * Auf dem S4 wird die Tastatur nicht korrekt angezeigt.
-  * Berechnungen in einen Background-Thread verschieben.
+  * Loading Spinner anzeigen, wenn berechnet wird
+  * bessere Pos1/Und Icons
 
 = Erledigt =
 
@@ -22,3 +22,5 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * beliebe Basen sollen auswählbar sein
   * Auf Android 2.3.3 wird der Überstrich (Periode) nicht angezeigt. (Fix: anderes Überstrich-Zeichen)
   * Hilfe: Erklärung, was der Überstrich macht, hinzufügen.
+  * Auf dem S4 wird die Tastatur nicht korrekt angezeigt.
+  * Berechnungen in einen Background-Thread verschieben.
