--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -17,6 +17,7 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * Tastatur wird auf Android 2.3.3 nicht korrekt dargestellt
   * Erklärung, was die '...' 3-Punkte machen, hinzufügen
   * Einstellungsmenü mit Korrektheit des Ergebnisses (Algorithmus, Anzahl Nachkommastellen)
+  * Button zum Tauschen von Ein- und Ausgabe-Basis
 
 = Erledigt =
 
