--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -15,9 +15,9 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * Loading Spinner anzeigen, wenn berechnet wird
   * bessere Pos1/Und Icons
   * Tastatur wird auf Android 2.3.3 nicht korrekt dargestellt
-  * Erklärung, was die '...' 3-Punkte machen, hinzufügen
   * Einstellungsmenü mit Korrektheit des Ergebnisses (Algorithmus, Anzahl Nachkommastellen)
   * Button zum Tauschen von Ein- und Ausgabe-Basis
+  * Activity-Status: save/restore hinzufügen
 
 = Erledigt =
 
@@ -28,3 +28,4 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * Hilfe: Erklärung, was der Überstrich macht, hinzufügen.
   * Auf dem S4 wird die Tastatur nicht korrekt angezeigt.
   * Berechnungen in einen Background-Thread verschieben.
+  * Erklärung, was die '...' 3-Punkte machen, hinzufügen
