--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -8,16 +8,11 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
 = Ausstehend =
 
   * Eingabe-Basis kann auf der Tastatur geändert werden.
-  * Die Ausgabe erfolgt stets in allen verfügbaren Basen (2,8,10,16)
   * Einstellung, ob Buchstaben in Hex-Werten groß oder klein geschrieben werden sollen
   * Step-by-Step Anleitung zur Umrechnung mit selbst definierbaren Beispielen
   * Dialog mit Spinnern zur Auswahl der Ein- und Ausgabe-Basis.
-  * Loading Spinner anzeigen, wenn berechnet wird
-  * bessere Pos1/Und Icons
-  * Tastatur wird auf Android 2.3.3 nicht korrekt dargestellt
   * Einstellungsmenü mit Korrektheit des Ergebnisses (Algorithmus, Anzahl Nachkommastellen)
   * Button zum Tauschen von Ein- und Ausgabe-Basis
-  * Activity-Status: save/restore hinzufügen
 
 = Erledigt =
 
@@ -26,6 +21,14 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * beliebe Basen sollen auswählbar sein
   * Auf Android 2.3.3 wird der Überstrich (Periode) nicht angezeigt. (Fix: anderes Überstrich-Zeichen)
   * Hilfe: Erklärung, was der Überstrich macht, hinzufügen.
-  * Auf dem S4 wird die Tastatur nicht korrekt angezeigt.
+  * Auf dem S4 wird die Tastatur nicht korrekt angezeigt. (Fix: horizonalGap-Hack)
   * Berechnungen in einen Background-Thread verschieben.
   * Erklärung, was die '...' 3-Punkte machen, hinzufügen
+  * bessere Pos1/Und Icons
+  * Tastatur wird auf Android 2.3.3 nicht korrekt dargestellt (Fix: eigene XML-Datei für v14)
+
+= Verworfen =
+
+  * Die Ausgabe erfolgt stets in allen verfügbaren Basen (2,8,10,16) (Grund: es gibt mittlerweile mehr als nur 4 Basen...)
+  * Activity-Status: save/restore hinzufügen (Grund: wird automatisch erledigt)
+  * Loading Spinner anzeigen, wenn berechnet wird (Grund: aufgrund verkürzter Berechnungszeit unnötig geworden)
