--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -9,10 +9,10 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
 
   * Eingabe-Basis kann auf der Tastatur geändert werden.
   * Einstellung, ob Buchstaben in Hex-Werten groß oder klein geschrieben werden sollen
-  * Step-by-Step Anleitung zur Umrechnung mit selbst definierbaren Beispielen
   * Dialog mit Spinnern zur Auswahl der Ein- und Ausgabe-Basis.
   * Einstellungsmenü mit Korrektheit des Ergebnisses (Algorithmus, Anzahl Nachkommastellen)
   * Button zum Tauschen von Ein- und Ausgabe-Basis
+  * 'Ist-Gleich'-Button auf Tastatur statt automatischem Rechnen
 
 = Erledigt =
 
@@ -26,6 +26,7 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * Erklärung, was die '...' 3-Punkte machen, hinzufügen
   * bessere Pos1/Und Icons
   * Tastatur wird auf Android 2.3.3 nicht korrekt dargestellt (Fix: eigene XML-Datei für v14)
+  * Step-by-Step Anleitung zur Umrechnung mit selbst definierbaren Beispielen
 
 = Verworfen =
 
