--- a/wiki/Ideen.wiki
+++ b/wiki/Ideen.wiki
@@ -15,6 +15,7 @@ Hier entsteht eine Liste von Ideen und Vorschlägen für diese App.
   * 'Ist-Gleich'-Button auf Tastatur statt automatischem Rechnen
   * in Help-Activity ein Link zum Mailen an die Entwickler
   * in der Help-Activity die Version anzeigen
+  * bei der Anzeige der Rechenschritte die Periode erkennen
 
 = Erledigt =
 
