--- a/trunk/0xCAFE/res/values-de/strings.xml
+++ b/trunk/0xCAFE/res/values-de/strings.xml
@@ -22,7 +22,7 @@
         <item>Basis 13</item>
         <item>Basis 14</item>
         <item>Basis 15</item>
-        <item>Basis 16 (hexadezimal</item>
+        <item>Basis 16 (hexadezimal)</item>
     </string-array>
     
     <string name="title_activity_help">Hilfe</string>
